force-app/main/default/objects/Country__c/fields/Capital_City__c.field-meta.xml
<CustomField>
    <fullName>Capital_City__c</fullName>
    <label>Capital City</label>
    <length>80</length>
    <type>Text</type>
</CustomField>