force-app/main/default/objects/Country__c/fields/Country_Code_3__c.field-meta.xml
<CustomField>
    <fullName>Country_Code_3__c</fullName>
    <label>Country Code 3</label>
    <length>3</length>
    <type>Text</type>
</CustomField>